@@ -1,0 +1,53 @@
+<gconfschemafile>
+  <schemalist>
+
+    <schema>
+      <key>/schemas/apps/gecko-mediaplayer/preferences/disable_qt</key>
+      <applyto>/apps/gecko-mediaplayer/preferences/disable_qt</applyto>
+      <owner>gecko-mediaplayer</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable QuickTime Support</short>
+        <long>Disable QuickTime Support in gecko-mediaplayer</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gecko-mediaplayer/preferences/disable_real</key>
+      <applyto>/apps/gecko-mediaplayer/preferences/disable_real</applyto>
+      <owner>gecko-mediaplayer</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable RealMedia Support</short>
+        <long>Disable RealMedia Support in gecko-mediaplayer</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gecko-mediaplayer/preferences/disable_wmp</key>
+      <applyto>/apps/gecko-mediaplayer/preferences/disable_wmp</applyto>
+      <owner>gecko-mediaplayer</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable Windows Media Support</short>
+        <long>Disable Windows Media Support in gecko-mediaplayer</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gecko-mediaplayer/preferences/disable_dvx</key>
+      <applyto>/apps/gecko-mediaplayer/preferences/disable_dvx</applyto>
+      <owner>gecko-mediaplayer</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable DiVX Support</short>
+        <long>Disable DiVX Support in gecko-mediaplayer</long>
+      </locale>
+    </schema>
+
+  </schemalist>
+</gconfschemafile>
