@@ -29,7 +29,13 @@ make install DESTDIR=%buildroot
 %clean
 rm -rf $buildroot
 
+%post
+update-desktop-database %{_datadir}/applications
+export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/gecko-mediaplayer.schemas > /dev/null
+
 %files
 %defattr(-,root,root,-)
 %{_docdir}/%{name}
 %{_libdir}/mozilla
+%config %{_sysconfdir}/gconf/schemas/gecko-mediaplayer.schemas
