@@ -40,28 +40,40 @@
 gchar *GetMIMEDescription()
 {
     gchar MimeTypes[4000];
+    GConfClient *gconf;
+    gboolean wmp_disabled;
+    
+    gconf = gconf_client_get_default();
+    wmp_disabled = gconf_client_get_bool(gconf, DISABLE_WMP, NULL);
+    g_object_unref(G_OBJECT(gconf));
 
-    g_strlcpy(MimeTypes,
-              "application/asx:*:Media Files;"
-              "video/x-ms-asf-plugin:*:Media Files;"
-              "video/x-msvideo:avi,*:AVI;"
-              "video/msvideo:avi,*:AVI;"
-              "application/x-mplayer2:*:Media Files;"
-              "application/x-ms-wmv:wmv,*:Microsoft WMV video;"
-              "video/x-ms-asf:asf,asx,*:Media Files;"
-              "video/x-ms-wm:wm,*:Media Files;"
-              "video/x-ms-wmv:wmv,*:Microsoft WMV video;"
-              "audio/x-ms-wmv:wmv,*:Windows Media;"
-              "video/x-ms-wmp:wmp,*:Windows Media;"
-              "application/x-ms-wmp:wmp,*:Windows Media;"
-              "video/x-ms-wvx:wvx,*:Windows Media;"
-              "audio/x-ms-wax:wax,*:Windows Media;"
-              "audio/x-ms-wma:wma,*:Windows Media;"
-              "application/x-drm-v2:asx,*:Windows Media;"
-              "audio/wav:wav,*:Microsoft wave file;"
-              "audio/x-wav:wav,*:Microsoft wave file;", sizeof(MimeTypes));
+    if (wmp_disabled) {
+        return NULL;
+    } else {
 
-    return g_strdup(MimeTypes);
+        g_strlcpy(MimeTypes,
+                  "application/asx:*:Media Files;"
+                  "video/x-ms-asf-plugin:*:Media Files;"
+                  "video/x-msvideo:avi,*:AVI;"
+                  "video/msvideo:avi,*:AVI;"
+                  "application/x-mplayer2:*:Media Files;"
+                  "application/x-ms-wmv:wmv,*:Microsoft WMV video;"
+                  "video/x-ms-asf:asf,asx,*:Media Files;"
+                  "video/x-ms-wm:wm,*:Media Files;"
+                  "video/x-ms-wmv:wmv,*:Microsoft WMV video;"
+                  "audio/x-ms-wmv:wmv,*:Windows Media;"
+                  "video/x-ms-wmp:wmp,*:Windows Media;"
+                  "application/x-ms-wmp:wmp,*:Windows Media;"
+                  "video/x-ms-wvx:wvx,*:Windows Media;"
+                  "audio/x-ms-wax:wax,*:Windows Media;"
+                  "audio/x-ms-wma:wma,*:Windows Media;"
+                  "application/x-drm-v2:asx,*:Windows Media;"
+                  "audio/wav:wav,*:Microsoft wave file;"
+                  "audio/x-wav:wav,*:Microsoft wave file;", sizeof(MimeTypes));
+
+        return g_strdup(MimeTypes);
+
+    }
 }
 
 NPError PluginGetValue(NPPVariable variable, void *value)
